--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://Maciej-Orczykowski.github.io/Buy-broccoli",
+  "homepage": "http://Maciej-Orczykowski.github.io/Buy-broccoli-app",
   "name": "buy-broccoli",
   "version": "0.1.0",
   "private": true,
